# rend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/models/: dingus.fbx
assets/shaders/: composite.frag  composite.vert  debug.frag  debug.vert  default.frag  default_mesh.frag  default_mesh.vert  deferred.frag  deferred.vert  light.frag  light.vert  screenspace.frag  shading.frag  shading.vert  shadow_map.vert
examples/: main.cpp
rend/include/: AudioPlayer.h  DescriptorSet.h  InputHandler.h  LightSource.h  Material.h  Mesh.h  Object.h  RenderPipelineBuilder.h  Renderable.h  Renderer.h  Shader.h  Texture.h  TimeUtils.h  constants.h  macros.h  types.h  vk_struct_init.h
rend/include/ECS/: EntityRegistry.h
rend/include/rend/: AssetImporter.h  EntityRegistry.h  GUI.h  InputHandler.h  LightSource.h  Object.h  System.h  TimeUtils.h  Transform.h  components.h  macros.h  math_utils.h
rend/include/rend/Audio/: AudioPlayer.h
rend/include/rend/Physics/: AABB.h  PhysicsSystem.h  Rigidbody.h
rend/include/rend/Rendering/Vulkan/: DebugBufferFillSystem.h  DescriptorSet.h  Material.h  Mesh.h  RenderPass.h  RenderPipelineBuilder.h  Renderable.h  Renderer.h  Shader.h  Texture.h  vk_helper_types.h  vk_struct_init.h
rend/include/rend/Systems/: DebugBufferFillSystem.h
rend/src/: EntityRegistry.cpp  InputHandler.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
shaders/: triangle.frag  triangle.vert
test/: CMakeLists.txt  ecs_test.cpp
